* cpplex.c (_cpp_lex_token): Handle directives in macro 	arguments. 	* cpplib.c (_cpp_handle_directive): Save and restore state 	if parsing macro args when entering a directive. 	* cppmacro.c (collect_args): No need to handle directives 	in macro arguments. 	(enter_macro_context, replace_args): Use the original macro 	definition in case it was redefined whilst collecting arguments. doc: 	* cpp.texi: Update. testsuite: 	* gcc.dg/cpp/undef1.c: Remove. 	* gcc.dg/cpp/directiv.c: Update. 	* gcc.dg/cpp/mac-dir-1.c, mac-dir-2.c: New tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50091 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,16 @@
+2002-02-27  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cpplex.c (_cpp_lex_token): Handle directives in macro
+	arguments.
+	* cpplib.c (_cpp_handle_directive): Save and restore state
+	if parsing macro args when entering a directive.
+	* cppmacro.c (collect_args): No need to handle directives
+	in macro arguments.
+	(enter_macro_context, replace_args): Use the original macro
+	definition in case it was redefined whilst collecting arguments.
+doc:
+	* cpp.texi: Update.
+
 2002-02-26  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/aix43.h (THREAD_MODEL_SPEC): Delete.
