--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb 27 10:39:20 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* linux64.h (ASM_OUTPUT_MAX_SKIP_ALIGN): Define.
+
 2002-02-27  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cpplex.c (_cpp_lex_token): Handle directives in macro
