* final.c (output_operand_lossage): Constify PFX_STR.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50099 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-02-27  Graham Stott  <grahams@redhat.com>
 
+	* final.c (output_operand_lossage): Constify PFX_STR.
+
 	* df.c (df_insn_refs_record): Use XEXP (x, 0) for USE.
 
 Wed Feb 27 10:45:19 CET 2002  Jan Hubicka  <jh@suse.cz>
