* loop.c (prescan_loop): Handle PARALLEL.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50101 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-02-27  Graham Stott  <grahams@redhat.com>
 
+	* loop.c (prescan_loop): Handle PARALLEL.
+
 	* unroll.c (loop_iterations): Return 0 if the add_val for
 	a BIV is REG.
 
