* config/s390/s390.c (s390_chunkify_pool): Do not confuse 	insn UIDs with insn addresses.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50112 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-27  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.c (s390_chunkify_pool): Do not confuse
+	insn UIDs with insn addresses.
+
 2002-02-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* c-common.c, c-common.h, c-decl.c, c-lex.c, c-parse.in,
