--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-27  Geoffrey Keating  <geoffk@redhat.com>
+
+	* expmed.c (expand_shift): Correctly test for low part of a
+	subreg.
+
 2002-02-27  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (s390_chunkify_pool): Do not confuse
