* mklibgcc.in: Don't use \n in a line subject to interpretation by echo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50119 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-27  Zack Weinberg  <zack@codesourcery.com>
+
+	* mklibgcc.in: Don't use \n in a line subject to
+	interpretation by echo.
+
 2002-02-27  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (s390_chunkify_pool): Do not confuse
