2002-02-27  Adam Megacz <adam@xwt.org>
        * java/net/natInetAddress.cc: Changed USE_WINSOCK to WIN32, added
        '#undef STRICT'.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50120 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-27  Adam Megacz <adam@xwt.org>
+
+	* java/net/natInetAddress.cc: Changed USE_WINSOCK to WIN32, added
+	'#undef STRICT'.
+
 2002-02-26  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/natSystem.cc (init_properties): Use __VERSION__.
