* dwarf2out.c (stack_adjust_offset): Add support for POST_INC, 	POST_DEC, and POST_MODIFY.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50121 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-27  Andrew MacLeod  <amacleod@redhat.com>
+
+	* dwarf2out.c (stack_adjust_offset): Add support for POST_INC, 
+	POST_DEC, and POST_MODIFY.
+
 2002-02-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* c-typeck.c (digest_init): Remove unused parameter; all
