* Makefile.in (integrate.o): Update. 	* c-decl.c (copy_lang_decl): Rename. 	* c-lang.c (LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): Redefine. 	* integrate.c: Include langhooks.h. 	(copy_decl_for_inlining): Update to use langhook. 	* langhooks-def.h (lhd_do_nothing_t, 	LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): New. 	(LANG_HOOKS_INITIALIZER): Update. 	* langhooks.c (lhd_do_nothing_t): New. 	* langhooks.h (struct lang_hooks): Add dup_lang_specific_decl. 	* tree.h (copy_lang_decl): Remove. ada: 	* misc.c (copy_lang_decl): Remove. cp: 	* class.c (build_clone): Update. 	* cp-lang.c (LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): Redefine. 	* cp-tree.h (cxx_dup_lang_specific_decl): New. 	* lex.c (copy_lang_decl): Rename cxx_dup_lang_specific_decl. 	(copy_decl): Update. 	* method.c (make_thunk): Update. f: 	* com.c (copy_lang_decl): Delete. java: 	* decl.c (copy_lang_decl): Rename java_dup_lang_specific_decl. 	* java-tree.h (java_dup_lang_specific_decl): New. 	* lang.c (LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): Redefine. objc: 	* objc-lang.c (LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): Redefine.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50122 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,19 @@
+2002-02-28  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* Makefile.in (integrate.o): Update.
+	* c-decl.c (copy_lang_decl): Rename.
+	* c-lang.c (LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): Redefine.
+	* integrate.c: Include langhooks.h.
+	(copy_decl_for_inlining): Update to use langhook.
+	* langhooks-def.h (lhd_do_nothing_t,
+	LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): New.
+	(LANG_HOOKS_INITIALIZER): Update.
+	* langhooks.c (lhd_do_nothing_t): New.
+	* langhooks.h (struct lang_hooks): Add dup_lang_specific_decl.
+	* tree.h (copy_lang_decl): Remove.
+objc:
+	* objc-lang.c (LANG_HOOKS_DUP_LANG_SPECIFIC_DECL): Redefine.
+
 2002-02-27  Andrew MacLeod  <amacleod@redhat.com>
 
 	* dwarf2out.c (stack_adjust_offset): Add support for POST_INC, 
