--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* misc.c (copy_lang_decl): Remove.
+
 2002-02-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* misc.c: Delete traditional-mode-related code copied from the
